bad/bin_op_eq_same_expression_not_always_true.example_compiler_output
ERROR
[1mbad/bin_op_eq_same_expression_not_always_true.lat:2:1: [1;31merror: [0;1mfunction does not return a value in all control paths[m
int main() {
[1;32m^[m
